--- a/snowflake_building.html
+++ b/snowflake_building.html
@@ -23,7 +23,7 @@
         </div>
     </section>
     <!-- top-header start -->
-     <!-- Header start -->
+    <!-- Header start -->
     <header class="sticky-top bg-white">
         <div class="container-fluid">
             <div class="row">
@@ -34,8 +34,8 @@
                     </button>
                 </div>
                 <div class="col-auto py-1 ">
-                    <a href="index.html"><img src="./assets/img/Shipra Play House Logo.png" style="max-width: 150px;" alt="Shipra Play House Logo"
-                            loading="lazy" class="img-fluid"></a>
+                    <a href="index.html"><img src="./assets/img/Shipra Play House Logo.png" style="max-width: 150px;"
+                            alt="Shipra Play House Logo" loading="lazy" class="img-fluid"></a>
                 </div>
                 <div class="col-auto mx-auto d-none d-md-block">
                     <ul class="nav">
@@ -76,12 +76,18 @@
                                             </td>
                                             <td class="p-0">
                                                 <li>
+                                                    <a class="dropdown-item" href="all_product.html">
+                                                        Puzzle Game </a>
+                                                </li>
+                                            </td>
+                                            <!-- <td class="p-0">
+                                                <li>
                                                     <a class="dropdown-item"
                                                         href="toys-games.html#v-pills-settings1">Musical Toy</a>
                                                 </li>
-                                            </td>
+                                            </td> -->
                                         </tr>
-                                        <tr>
+                                        <!-- <tr>
                                             <td class="p-0">
                                                 <li>
                                                     <a class="dropdown-item" href="toys-games.html#v-pills-settings2">
@@ -95,7 +101,7 @@
                                                     </a>
                                                 </li>
                                             </td>
-                                        </tr>
+                                        </tr> -->
                                         <tr>
                                             <td class="p-0">
                                                 <li>
@@ -118,12 +124,12 @@
                                                         Baby Toy</a>
                                                 </li>
                                             </td>
-                                            <td class="p-0">
+                                            <!-- <td class="p-0">
                                                 <li>
                                                     <a class="dropdown-item"
                                                         href="toys-games.html#v-pills-settings9">Outdoor Toy</a>
                                                 </li>
-                                            </td>
+                                            </td> -->
                                         </tr>
                                     </tbody>
                                 </table>
@@ -175,13 +181,13 @@
             </div>
         </div>
     </header>
-   
+
     <!-- offcanvas section start -->
     <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
         <div class="offcanvas-header">
             <h5 class="offcanvas-title">
-                <a href="index.html"><img src="./assets/img/Shipra Play House Logo.png" style="max-width: 150px;" alt="Shipra Play House Logo"
-                        loading="lazy" class="img-fluid"></a>
+                <a href="index.html"><img src="./assets/img/Shipra Play House Logo.png" style="max-width: 150px;"
+                        alt="Shipra Play House Logo" loading="lazy" class="img-fluid"></a>
             </h5>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
@@ -206,8 +212,8 @@
     <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasDropdown" aria-labelledby="offcanvasExampleLabel">
         <div class="offcanvas-header align-items-start">
             <h5 class="offcanvas-title">
-                <a href="index.html"><img src="./assets/img/Shipra Play House Logo.png" style="max-width: 150px;" alt="Shipra Play House Logo"
-                        loading="lazy" class="img-fluid"></a>
+                <a href="index.html"><img src="./assets/img/Shipra Play House Logo.png" style="max-width: 150px;"
+                        alt="Shipra Play House Logo" loading="lazy" class="img-fluid"></a>
                 <p class="mb-0">
                     <a href="#" class="text-black h6" role="button" data-bs-toggle="offcanvas"
                         data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
@@ -226,13 +232,13 @@
                 <li><a href="toys-games.html#v-pills-home">Educational Toy</a> </li>
                 <li><a href="toys-games.html#v-pills-profile">Construction Toy</a></li>
                 <li><a href="toys-games.html#v-pills-settings0">Board Game</a></li>
-                <li><a href="all_product.html">Musical Toy</a></li>
+                <!-- <li><a href="all_product.html">Musical Toy</a></li> -->
                 <li><a href="all_product.html">Puzzle Game</a></li>
-                <li><a href="all_product.html">Building Blocks</a></li>
+                <!-- <li><a href="all_product.html">Building Blocks</a></li> -->
                 <li><a href="toys-games.html#v-pills-settings6">Sports Toy</a></li>
                 <li><a href="toys-games.html#v-pills-settings7">Creative Toy</a></li>
                 <li><a href="all_product.html">Baby Toy</a></li>
-                <li><a href="all_product.html">Outdoor Toy</a></li>
+                <!-- <li><a href="all_product.html">Outdoor Toy</a></li> -->
             </ul>
         </div>
     </div>
