--- a/musical_toy.html
+++ b/musical_toy.html
@@ -76,11 +76,17 @@
                                             </td>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="all_product.html">Musical Toy</a>
+                                                    <a class="dropdown-item" href="all_product.html">
+                                                        Puzzle Game </a>
                                                 </li>
                                             </td>
+                                            <!-- <td class="p-0">
+                                                <li>
+                                                    <a class="dropdown-item" href="all_product.html">Musical Toy</a>
+                                                </li>
+                                            </td> -->
                                         </tr>
-                                        <tr>
+                                        <!-- <tr>
                                             <td class="p-0">
                                                 <li>
                                                     <a class="dropdown-item" href="all_product.html">
@@ -94,7 +100,7 @@
                                                     </a>
                                                 </li>
                                             </td>
-                                        </tr>
+                                        </tr> -->
                                         <tr>
                                             <td class="p-0">
                                                 <li>
@@ -117,11 +123,11 @@
                                                         Baby Toy</a>
                                                 </li>
                                             </td>
-                                            <td class="p-0">
+                                            <!-- <td class="p-0">
                                                 <li>
                                                     <a class="dropdown-item" href="all_product.html">Outdoor Toy</a>
                                                 </li>
-                                            </td>
+                                            </td> -->
                                         </tr>
                                     </tbody>
                                 </table>
@@ -224,13 +230,13 @@
                 <li><a href="toys-games.html#v-pills-home">Educational Toy</a> </li>
                 <li><a href="toys-games.html#v-pills-profile">Construction Toy</a></li>
                 <li><a href="toys-games.html#v-pills-settings0">Board Game</a></li>
-                <li><a href="all_product.html">Musical Toy</a></li>
+                <!-- <li><a href="all_product.html">Musical Toy</a></li> -->
                 <li><a href="all_product.html">Puzzle Game</a></li>
-                <li><a href="all_product.html">Building Blocks</a></li>
+                <!-- <li><a href="all_product.html">Building Blocks</a></li> -->
                 <li><a href="toys-games.html#v-pills-settings6">Sports Toy</a></li>
                 <li><a href="toys-games.html#v-pills-settings7">Creative Toy</a></li>
                 <li><a href="all_product.html">Baby Toy</a></li>
-                <li><a href="all_product.html">Outdoor Toy</a></li>
+                <!-- <li><a href="all_product.html">Outdoor Toy</a></li> -->
             </ul>
         </div>
     </div>
@@ -425,7 +431,7 @@
     <!-- form -->
     <!-- Musical end -->
 
-     <!-- footer start -->
+    <!-- footer start -->
     <section class="contact mt-5">
         <div class="container-fluid px-5">
             <div class="row">
