--- a/wholesale/index.html
+++ b/wholesale/index.html
@@ -76,12 +76,18 @@
                                             </td>
                                             <td class="p-0">
                                                 <li>
+                                                    <a class="dropdown-item" href="all_product.html">
+                                                        Puzzle Game </a>
+                                                </li>
+                                            </td>
+                                            <!-- <td class="p-0">
+                                                <li>
                                                     <a class="dropdown-item"
                                                         href="toys-games.html#v-pills-settings1">Musical Toy</a>
                                                 </li>
-                                            </td>
+                                            </td> -->
                                         </tr>
-                                        <tr>
+                                        <!-- <tr>
                                             <td class="p-0">
                                                 <li>
                                                     <a class="dropdown-item" href="toys-games.html#v-pills-settings2">
@@ -95,7 +101,7 @@
                                                     </a>
                                                 </li>
                                             </td>
-                                        </tr>
+                                        </tr> -->
                                         <tr>
                                             <td class="p-0">
                                                 <li>
@@ -118,12 +124,12 @@
                                                         Baby Toy</a>
                                                 </li>
                                             </td>
-                                            <td class="p-0">
+                                            <!-- <td class="p-0">
                                                 <li>
                                                     <a class="dropdown-item"
                                                         href="toys-games.html#v-pills-settings9">Outdoor Toy</a>
                                                 </li>
-                                            </td>
+                                            </td> -->
                                         </tr>
                                     </tbody>
                                 </table>
@@ -226,13 +232,13 @@
                 <li><a href="toys-games.html#v-pills-home">Educational Toy</a> </li>
                 <li><a href="toys-games.html#v-pills-profile">Construction Toy</a></li>
                 <li><a href="toys-games.html#v-pills-settings0">Board Game</a></li>
-                <li><a href="toys-games.html#v-pills-settings1">Musical Toy</a></li>
+                <!-- <li><a href="toys-games.html#v-pills-settings1">Musical Toy</a></li> -->
                 <li><a href="toys-games.html#v-pills-settings2">Puzzle Game</a></li>
-                <li><a href="toys-games.html#v-pills-settings3">Building Blocks</a></li>
+                <!-- <li><a href="toys-games.html#v-pills-settings3">Building Blocks</a></li> -->
                 <li><a href="toys-games.html#v-pills-settings6">Sports Toy</a></li>
                 <li><a href="toys-games.html#v-pills-settings7">Creative Toy</a></li>
                 <li><a href="toys-games.html#v-pills-settings8">Baby Toy</a></li>
-                <li><a href="toys-games.html#v-pills-settings9">Outdoor Toy</a></li>
+                <!-- <li><a href="toys-games.html#v-pills-settings9">Outdoor Toy</a></li> -->
             </ul>
         </div>
     </div>
