--- a/wooden_table.html
+++ b/wooden_table.html
@@ -74,19 +74,20 @@
                                                         Board Game</a>
                                                 </li>
                                             </td>
-                                            <td class="p-0">
+                                            <!-- <td class="p-0">
                                                 <li>
                                                     <a class="dropdown-item" href="all_product.html">Musical Toy</a>
                                                 </li>
-                                            </td>
-                                        </tr>
-                                        <tr>
+                                            </td> -->
                                             <td class="p-0">
                                                 <li>
                                                     <a class="dropdown-item" href="all_product.html">
                                                         Puzzle Game </a>
                                                 </li>
                                             </td>
+                                        </tr>
+                                        <!-- <tr>
+                                            
                                             <td class="p-0">
                                                 <li>
                                                     <a class="dropdown-item" href="all_product.html">
@@ -94,7 +95,7 @@
                                                     </a>
                                                 </li>
                                             </td>
-                                        </tr>
+                                        </tr> -->
                                         <tr>
                                             <td class="p-0">
                                                 <li>
@@ -117,11 +118,11 @@
                                                         Baby Toy</a>
                                                 </li>
                                             </td>
-                                            <td class="p-0">
+                                            <!-- <td class="p-0">
                                                 <li>
                                                     <a class="dropdown-item" href="all_product.html">Outdoor Toy</a>
                                                 </li>
-                                            </td>
+                                            </td> -->
                                         </tr>
                                     </tbody>
                                 </table>
