--- a/form.html
+++ b/form.html
@@ -12,11 +12,11 @@
     <style>
         body .form-card {
             max-width: 500px;
-            margin: 50px auto;
+            margin: 20px auto;
             background: #fff;
             border-radius: 15px;
             box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
-            padding: 30px;
+            padding: 20px 30px 10px 30px;
             transition: 0.3s;
         }
 
@@ -44,6 +44,7 @@
             font-weight: 600;
             border-radius: 8px;
             transition: 0.3s;
+            padding-inline: 30px;
         }
 
         .btn-submit:hover {
@@ -284,9 +285,10 @@
     </div>
     <!-- offcanvas section end -->
     <!-- form start -->
+
     <div class="form-card" style="background-color:#f0e9e9">
         <h2 class="form-title">Order Form</h2>
-        <form>
+        <form id="orderForm">
             <div class="mb-3">
                 <label for="fullName" class="form-label">Full Name</label>
                 <input type="text" class="form-control" id="fullName" placeholder="Enter your full name" required>
@@ -307,8 +309,19 @@
                 <label for="phone" class="form-label">Phone No.</label>
                 <input type="tel" class="form-control" id="phone" placeholder="Enter your phone number" required>
             </div>
+            <div class="row justify-content-between">
+                <div class="col">
+                    <p class="mb-0">
+                        Price: <span id="price"></span>
+                    <p class="mb-0">Quantity: <span id="qty"></span></p>
+                    <p class="fw-bold mb-0">Total: <span id="total"></span></p>
+                    </p>
+                </div>
+                <div class="col text-end align-self-center">
+                    <button type="submit" class="btn btn-submit ">Continue</button>
+                </div>
+            </div>
 
-            <button type="submit" class="btn btn-submit w-100">Submit</button>
         </form>
     </div>
     <!-- form end -->
@@ -441,20 +454,42 @@
     </section>
     <!-- footer end -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/js/all.min.js"></script>
     <script src="./assets/js/search.js"></script>
-
-
     <script>
-        function changeImage(thumb) {
-            const main = document.getElementById('mainDisplay');
-            main.src = thumb.src;
-            // Remove active from all
-            document.querySelectorAll('.thumb-img').forEach(img => img.classList.remove('active'));
-            // Add active to selected
-            thumb.classList.add('active');
-        } 
+        const price = localStorage.getItem("selectedPrice");
+        const qty = localStorage.getItem("selectedQty");
+        const total = localStorage.getItem("totalPrice");
+
+        if (price && qty && total) {
+            document.getElementById("price").innerText = `₹${price}`;
+            document.getElementById("qty").innerText = qty;
+            document.getElementById("total").innerText = `₹${total}`;
+        }
+        function goToPayment() {
+            window.location.href = "payment.html";
+        }
     </script>
+<script>
+  document.getElementById("orderForm").addEventListener("submit", function(e) {
+    e.preventDefault(); // page refresh roko
+
+    // form ke data collect karo
+    const fname = document.getElementById("fullName").value;
+    const address = document.getElementById("address").value;
+    const pincode = document.getElementById("pincode").value;
+    const phone = document.getElementById("phone").value;
+
+    // localStorage me save karo
+    localStorage.setItem("customerfName", fname);
+    localStorage.setItem("customerAddress", address);
+    localStorage.setItem("customerPincode", pincode);
+    localStorage.setItem("customerPhone", phone);
+
+    // ab payment page pe le jao
+    window.location.href = "payment.html";
+  });
+</script>
+
 </body>
 
 </html>
